Version 1.1.0-CVS (?? ??? 2005)
 - Fixed bug 1296294: Javascript error when saving with empty description on IE
 - Applied patch 1290583: No more crash in tz_import.php on install and fixed
   quoted int values in sql
 - Patch 1275638: minor typos in date formats
 - Patch 1275857: Added missing Romanian and Welsh from array in translate.php
 - Fixed bug 1276005: Events ending at midnight do not display properly
 - Fixed bug 1276729: v1.1 cal_mod_date/time not stored in GMT
 - Fixed bug 1276782: icalclient defaults to __public__ permissions
 - Fixed bug 1246913: cal_status incorrect when publish from iCal
 - Fixed bug 1276709: week_details.php broke in revision 1.31 and up
 - Implemented RFE 1209445: single-day untimed events appear before multi-day
 - Fixed bug 1265900: exportation to iCal. Newlines should not be escaped per RFC2445
 - Fixed bug 1265575: Bug in get_all_dates()
 - Fixed bug 1275972: First day of daily repeat missing
 - Added minical.php for using in iframe in external site
 - Fixed bug 1272390: publish.php broken in v1.1-CVS
 - Fixed bug 1259997: repeating events don't send reminder on last day
 - Applied patch 1204988: view_v.php : vertical week, bg correction for "today"
 - Added patch 1257167: Delete should select the user by default
 - Fixed bug 1259413: "Check for event conflicts" not working in latest CVS
 - Fixed bug 1262236: Conflict checking broken in new TZ code
 - Fixed bug 1261920: "Email all participants" link did not include
   external users
 - Fixed bug 1261571: Overriding a conflict when name has double quotes
 - Fixed bug 1214768: assistants can't see calendar if allow_view_other is N
 - Fixed bug 1205806: send_reminders.php did not check some settings properly
 - Fixed bug 1257544: Changing event end date
 = Fixed bug 1256250: reject_entry.php error
 - Fixed bug 1254880: the fill in of languages in system settings wrong
 - Fixed bug 1214060: activity log not working properly with user access control